# de4w-engineering-workbook

./: .gitignore  README.md  _quarto.yml  dashboard.py  main.py  pyproject.toml
.github/workflows/: publish-quarto.yml
_freeze/docs/workbooks/01_DE4W_Workbook_Training/execute-results/: html.json  tex.json
app/: __init__.py  api.py  config.py  data_loader.py  evaluation.py  feature_extraction.py  live_buffer.py  model_utils.py  phyphox_client.py  pipeline.py  training.py  windowing.py
data/: features_df.csv
docs/: _quarto.yml  index.qmd  instructor_guide.qmd  lab_guide.qmd  project_checklist.md
docs/_freeze/modules/02_dataset/execute-results/: html.json  tex.json
docs/_freeze/modules/03_loading_and_exploration/execute-results/: html.json  tex.json
docs/_site/: index.html  search.json
docs/_site/modules/: 01_introduction.html  02_dataset.html  03_loading_and_exploration.html  04_windowing.html  05_feature_engineering.html  06_machine_learning.html  07_deployment.html  08_live_prediction.html
docs/modules/: 01_introduction.qmd  02_dataset.qmd  03_loading_and_exploration.qmd  04_windowing.qmd  05_feature_engineering.qmd  06_machine_learning.qmd  07_deployment.qmd  07_evaluation.qmd  08_live_prediction.qmd
docs/slides/: de4w_capstone_project.qmd
docs/workbooks/: 01_DE4W_Workbook_Training.html  01_DE4W_Workbook_Training.qmd  index.html  index.qmd
models/: activity_labels.joblib  activity_model_random_forest.joblib  feature_columns.joblib  model_metadata.json
notebooks/: 01_train_activity_model.ipynb
(+6 files in other folders)
